<resources>
    <string name="app_name">Interval reminders</string>
    <string name="repeat">Repeat</string>
    <string name="cards">Cards</string>
    <string name="add_card">Add card</string>
    <string name="repeat_today">Repeat today</string>
    <string name="all_cards">All cards</string>
    <string name="new_card">New card</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_error">Error save</string>
    <string name="saved">Saved</string>
    <string name="cant_load">Can\'t load data, sorry</string>
    <string name="cant_remove">Can\'t remove item, sorry</string>
    <string name="delete">Delete card?</string>
    <string name="delete_description">All reminders will also be deleted. You will not be able to recover them</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_repeats">Nothing to repeat</string>
    <string name="no_cards">Add new cards</string>
    <string name="repeat_card">Repeat the card</string>
    <string name="no_permission">We won\'t send reminders without permission</string>
    <string name="check_perrmision">You may not have authorized notifications</string>
</resources>