<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/add_background">

    <TextView
        android:id="@+id/addTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_card"
        android:textAppearance="@style/text_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addText"
        android:background="@drawable/item_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|center"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTittle"
        android:hint="@string/enter_a_name"
        android:textAppearance="@style/text_main"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textAppearance="@style/text_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAppearance="@style/text_main"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/addText" />
</androidx.constraintlayout.widget.ConstraintLayout>